--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^19.0.10",
     "@types/redux-mock-store": "^1.5.0",
     "jest": "^29.7.0",
+    "react-test-renderer": "^19.0.0",
     "redux-mock-store": "^1.5.5",
     "typescript": "^5.1.3"
   },
